2008-02-13  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokeravatar.py.in
	(PokerAvatarTestCase.test12_buyIntoGame): Wrote function.
	(PokerAvatarTestCase.buyInTable): Wrote function.
	(PokerAvatarTestCase.test13_stats): Wrote function.
	(PokerAvatarTestCase.statsQuery): Wrote function.

2008-02-12  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokeravatar.py.in (PokerAvatarTestCase.joinTable):
	Removed myGame variable; no longer needed.
	Changed currency_serial for Table2 to 0.

2008-02-11  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokeravatar.py.in (PokerAvatarTestCase.sitTable):
	Removed extraneous prints.
	(PokerAvatarTestCase.test10_explainFailsOnceAtTable): Wrote
	function.
	(PokerAvatarTestCase.forceExplain): Wrote function.
	(PokerAvatarTestCase.test11_loginWithPasswordTooLong): Wrote
	function.
	(PokerAvatarTestCase.loginWithPasswordTooLong): Wrote function.

2008-02-10  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokeravatar.py.in
	(PokerAvatarTestCase.test05_testStrInterpolation): Callback function
	should return (client, packet).
	(PokerAvatarTestCase.test07_getImage): Wrote function.
	(PokerAvatarTestCase.test06_5_setRolesIsAnErrorWhenDoneAfterLogin):
	Wrote function.
	(PokerAvatarTestCase.test06_setRoles): Roles must be set before login.
	(PokerAvatarTestCase.test06_setRoles.setRoles): should not
	try/catch error as test following it does.
	(PokerAvatarTestCase.test08_joinTable): Wrote function.
	(PokerAvatarTestCase.joinTable): Wrote helper function.
	(PokerAvatarTestCase.test09_sitTable): Wrote function.
	(PokerAvatarTestCase.sitTable): Wrote helper function.

2008-02-09  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-pokeravatar.py.in
	(PokerAvatarTestCase.test04_createTable): Wrote function.
	(PokerAvatarTestCase.test05_testStrInterpolation): Wrote funciton.
	(PokerAvatarTestCase.test04_createTable.handleTable): Wrote function.

	* pokernetwork/pokeravatar.py (PokerAvatar.__str__): Fixed bug;